@@ -1151,6 +1151,7 @@ extern void CommandAccept( char * ),
     CommandShowGeometry ( char * ),
     CommandShowEgyptian( char * ),
     CommandShowJacoby( char * ),
+    CommandShow8912( char * ),
     CommandShowKeith( char * ),
     CommandShowKleinman( char * ),
     CommandShowLang( char * ),
