@@ -1882,6 +1882,8 @@ command cER = {
 #endif
     { "jacoby", CommandShowJacoby, 
       N_("See if the Jacoby rule is used in money sessions"), NULL, NULL },
+    { "8912", CommandShow8912, N_("Use 8912 rule to predict cube action"),
+        szOPTPOSITION, NULL },
     { "keith", CommandShowKeith, N_("Calculate Keith Count for "
       "position"), szOPTPOSITION, NULL },
     { "kleinman", CommandShowKleinman, N_("Calculate Kleinman count for "
