@@ -208,23 +208,17 @@ typedef enum _gnubgcommand {
     CMD_SHOW_ENGINE,
     CMD_SHOW_EPC,
     CMD_SHOW_EXPORT,
-    CMD_SHOW_GAMMONVALUES,
     CMD_SHOW_MARKETWINDOW,
     CMD_SHOW_MATCHEQUITYTABLE,
-    CMD_SHOW_KEITH,
     CMD_SHOW_KLEINMAN,
     CMD_SHOW_MANUAL_ABOUT,
     CMD_SHOW_MANUAL_WEB,
-    CMD_SHOW_ONECHEQUER,
-    CMD_SHOW_ONESIDEDROLLOUT,
-    CMD_SHOW_PIPCOUNT,
     CMD_SHOW_ROLLS,
     CMD_SHOW_STATISTICS_GAME,
     CMD_SHOW_STATISTICS_MATCH,
     CMD_SHOW_STATISTICS_SESSION,
     CMD_SHOW_TEMPERATURE_MAP,
     CMD_SHOW_TEMPERATURE_MAP_CUBE,
-    CMD_SHOW_THORP,
     CMD_SHOW_VERSION,
     CMD_SHOW_WARRANTY,
     CMD_SWAP_PLAYERS,
@@ -296,23 +290,17 @@ static char *aszCommands[ NUM_CMDS ] = {
     "show engine",
     "show epc",
     "show export",
-    "show gammonvalues",
     "show marketwindow",
     "show matchequitytable",
-    "show keith",
-    "show kleinman",
+    "show kleinman", /* opens race theory window */
     "show manual about",
     "show manual web",
-    "show onechequer",
-    "show onesidedrollout",
-    "show pipcount",
     "show rolls",
     "show statistics game",
     "show statistics match",
     "show statistics session",
     "show temperaturemap",
     "show temperaturemap =cube",
-    "show thorp",
     "show version",
     "show warranty",
     "swap players",
@@ -1979,15 +1967,6 @@ GtkItemFactoryEntry aife[] = {
           GtkRelationalShowStats, 0, NULL },
 #endif
 	{ N_("/_Analyse/-"), NULL, NULL, 0, "<Separator>" },
-	{ N_("/_Analyse/_Pip count"), NULL, Command, CMD_SHOW_PIPCOUNT, NULL },
-	{ N_("/_Analyse/_Kleinman count"), 
-          NULL, Command, CMD_SHOW_KLEINMAN, NULL },
-	{ N_("/_Analyse/Keith count"), NULL, Command, CMD_SHOW_KEITH, NULL },
-	{ N_("/_Analyse/_Thorp count"), NULL, Command, CMD_SHOW_THORP, NULL },
-	{ N_("/_Analyse/One chequer race"), NULL, Command, 
-          CMD_SHOW_ONECHEQUER, NULL },
-	{ N_("/_Analyse/One sided rollout"), NULL, Command, 
-          CMD_SHOW_ONESIDEDROLLOUT, NULL },
 	{ N_("/_Analyse/Distribution of rolls"), NULL, Command, 
           CMD_SHOW_ROLLS, NULL },
 	{ N_("/_Analyse/Temperature Map"), NULL, Command, 
@@ -1995,13 +1974,13 @@ GtkItemFactoryEntry aife[] = {
 	{ N_("/_Analyse/Temperature Map (cube decision)"), NULL, Command, 
           CMD_SHOW_TEMPERATURE_MAP_CUBE, NULL },
 	{ N_("/_Analyse/-"), NULL, NULL, 0, "<Separator>" },
+	{ N_("/_Analyse/_Race Theory"), 
+          NULL, Command, CMD_SHOW_KLEINMAN, NULL },
 	{ N_("/_Analyse/Bearoff Databases"), NULL, Command, 
           CMD_SHOW_BEAROFF, NULL },
 	{ N_("/_Analyse/Effective Pip Count"), NULL, Command, 
           CMD_SHOW_EPC, NULL },
 	{ N_("/_Analyse/-"), NULL, NULL, 0, "<Separator>" },
-	{ N_("/_Analyse/_Gammon values"), NULL, Command, CMD_SHOW_GAMMONVALUES,
-	  NULL },
 	{ N_("/_Analyse/_Market window"), NULL, Command, CMD_SHOW_MARKETWINDOW,
 	  NULL },
 	{ N_("/_Analyse/M_atch equity table"), NULL, Command,
